--- a/README
+++ b/README
@@ -2,71 +2,14 @@
   Mistpark
   Distributed Social Network
 
-What if there was a social network which was free to use, open source - and 
-where your privacy is always under your control? 
+  Mistpark has been discontinued - but don't be alarmed. We've merely changed 
+the name. The project is alive and well at 
 
-What if this social network could scale to encompass the entire internet, and 
-*not* require a central organisation to provide servers (in exchange for 
-selling your private information to advertisers)?
+http://github.com/friendika/friendika
 
-Look no further. 
- 
-Mistpark is a social network without boundaries. Mistpark installations can 
-link together into a global social network which is free from central 
-control. We are developing connectors to seamlessly communicate with many 
-other open social networks and providers - GNU-social, Diaspora, Status.net, 
-and even some of the larger closed services such as Facebook and Twitter.
+  Find us on the web at http://friendika.com
 
-Over the coming months, the boundaries between these networks will start to 
-become indistinguishable as they all become part of your social circle.
+  
 
-Your personal thoughts and conversations belong to you - and are shared with 
-those you wish to share them with. 
 
-Period.  
 
-Mistpark is secure, and as private as you wish it to be. Our privacy settings 
-are straight-forward and simple, because we know that relationships rarely are 
-(straight-forward and simple). Whether you're communicating with drinking 
-buddies or potential employers, you can rest assured that each is only able to 
-see the side of you that you wish to present. 
-
-A single instance of Mistpark Server can easily support hundreds of (and up to
-several thousand) people using commodity hosting hardware. Each of these 
-people are able to connect with potentially hundreds or thousands of friends 
-and associates on any other supported network anywhere in the world and share 
-photos, links, status updates, etc. 
-
-But maybe you don't want to be connected to the world... That's OK too. 
-Mistpark may also be closed off from the global community and used to support
-social networking amongst corporate, educational, religious, and other private
-communities. This makes it an excellent choice for the social networking needs
-of young teenagers and especially k-12 organisations. 
-
-Every person on Mistpark has unlimited profiles available to them. There is a 
-"public profile" which can be seen by anybody. Additional profiles may be 
-tailored to specific groups or individuals.
-
-Groups may be created and used for closed conversations. In this way your 
-conversations with one group of friends is completely isolated from other 
-friends or groups of friends.
-
-You may also create interactive band/celebrity pages, special interest groups,
-and even organisational 'soapboxes' - for social communications that require
-the ability to scale to global levels. Mistpark provides for automatic
-relationship management in these extreme cases so that you can concentrate on
-your message and public persona - and not worry about being swamped by friend
-requests. You can even maintain private social contact with your closest 
-friends and public updates to your hordes of fans - using the same interface.
-
-No other social network offers this ability.  
-
-IMPORTANT: Please see the file INSTALL for system requirements.
-
-Visit http://mistpark.com for more information. 
-
-You may also contact the author and raise issues via the source code 
-repository on github -- http://github.com/macgirvin/mistpark
-
-It's your network now. If social networking isn't what you thought it would 
-be, help us to make it better.
